--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,35 +1,46 @@
 name: example
 
 on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: '0 12 * * *'  # Runs every day at 12:00 GMT
+  workflow_dispatch: # Allows you to manually trigger the workflow
+  # schedule:
+  #   - cron: '0 12 * * *'  
+    # Runs every day at 12:00 GMT
+    # Remove 'schedule' comment to turn on job
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      
+        uses: actions/checkout@v3 # checkout repo
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.9'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
-          python -m venv venv
-          . venv/bin/activate
-          pip install -r ./bots/example/requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r ./bots/tiktok_followers/requirements.txt
 
-      - name: Run the bot
-        run: bash ./bots/example/src/runbot.sh
-
-      - name: Upload to S3
+      - name: Run the scraper
+        run: |
+          python ./bots/tiktok_followers/main.py
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: python ./utils/s3_upload.py ./bots/example/src/data example
+          AWS_DEFAULT_REGION: 'us-east-1'
+
+      - name: Commit updated timeseries
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add ./src/data/example.csv
+          git commit -m "Update data" -a --allow-empty --author="stiles <stiles@users.noreply.github.com>"
+
+      - name: Push changes to main branch
+        run: |
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
