--- a/.github/workflows/tiktok_followers.yml
+++ b/.github/workflows/tiktok_followers.yml
@@ -1,11 +1,9 @@
-name: example
+name: tiktok_followers
 
 on:
   workflow_dispatch: # Allows you to manually trigger the workflow
-  # schedule:
-  #   - cron: '0 12 * * *'  
-    # Runs every day at 12:00 GMT
-    # Remove 'schedule' comment to turn on job
+  schedule:
+    - cron: '0 12 * * *'  # Runs every day at 12:00 GMT
 
 jobs:
   build:
@@ -36,8 +34,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add ./src/data/example.csv
-          git commit -m "Update data" -a --allow-empty --author="stiles <stiles@users.noreply.github.com>"
+          git add ./src/data/
+          git commit -m "Update timeseries data" -a --allow-empty --author="stiles <stiles@users.noreply.github.com>"
 
       - name: Push changes to main branch
         run: |
