--- a/.github/workflows/tiktok_followers.yml
+++ b/.github/workflows/tiktok_followers.yml
@@ -3,7 +3,7 @@ name: tiktok_followers
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 12 * * *'  # Runs every day at 12:00 GMT
+    - cron: '0 5 * * *'  # Runs every day at 10pm PT
 
 jobs:
   build:
