--- a/.github/workflows/tiktok_followers.yml
+++ b/.github/workflows/tiktok_followers.yml
@@ -46,7 +46,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add ${{ env.BOT_PATH }}/src/data/
-          git commit -m "Update timeseries data" -a --allow-empty --author="stiles <stiles@users.noreply.github.com>"
+          git commit -m "Updated data" -a --allow-empty --author="stiles <stiles@users.noreply.github.com>"
 
       - name: Push changes to main branch
         run: |
