--- a/bots/tiktok_followers/config.json
+++ b/bots/tiktok_followers/config.json
@@ -8,7 +8,7 @@
     "bot_name": "tiktok_followers",
     "output_directory": "./src/data",
     "archive_url": "https://stilesdata.com/tiktok_followers/tiktok_followers.json",
-    "timeseries_file": "./src/data/tiktok_followers_timeseries.json",
+    "timeseries_file": "https://stilesdata.com/tiktok_followers/tiktok_followers_timeseries.json",
     "retry_attempts": 3,
     "users": ["mattystiles", "evablytheofficial"]
 }
