--- a/.github/workflows/la_outages.yaml
+++ b/.github/workflows/la_outages.yaml
@@ -3,7 +3,7 @@ name: la_outages
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every five minutes
+    - cron: '0 5 * * *'  # Runs every day at 10pm PT
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     env:
       BOT_NAME: "la_outages"
       BOT_PATH: "./bots/la_outages"
-      PYTHONPATH: "${{ github.workspace }}"  # Set the PYTHONPATH to the project root
+      PYTHONPATH: "${{ github.workspace }}"
 
     steps:
       - name: Checkout code
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ${{ env.BOT_PATH }}/requirements.txt
-            
+
       - name: Run the scraper
         run: |
           python ${{ env.BOT_PATH }}/main.py
@@ -40,8 +40,8 @@ jobs:
         run: |
           git config pull.rebase false
           git pull origin main
-
-      - name: Commit updated data
+      
+      - name: Commit updated timeseries
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
@@ -52,4 +52,4 @@ jobs:
         run: |
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}name: la_outages
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
