--- a/.github/workflows/tiktok_followers.yml
+++ b/.github/workflows/tiktok_followers.yml
@@ -36,11 +36,11 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'us-east-1'
 
-      - name: Pull latest changes
+      - name: Pull latest changes before committing
         run: |
           git config pull.rebase false
           git pull origin main
-      
+
       - name: Commit updated timeseries
         run: |
           git config --local user.email "action@github.com"
