--- a/.github/workflows/crumbl_menu.yml
+++ b/.github/workflows/crumbl_menu.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ${{ env.BOT_PATH }}/requirements.txt
-            
+
       - name: Run the scraper
         run: |
           python ${{ env.BOT_PATH }}/main.py
@@ -36,12 +36,12 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'us-east-1'
 
-      - name: Pull latest changes
+      - name: Pull latest changes before committing
         run: |
           git config pull.rebase false
           git pull origin main
 
-      - name: Commit updated data
+      - name: Commit updated timeseries
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
